# NewHorizons

./: README.md  pyproject.toml  todo.txt
newhorizons/: endpoints.py  helpers.py  main.py  schemata.py
newhorizons/extractors/: channel.py  video.py
newhorizons/routers/: api.py
tests/: test_newhorizons.py
